--- a/site/views/layouts/main.handlebars
+++ b/site/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
         {{{body}}}
 
         {{#if showTests}}
+        <div id="mocha"></div>
         <script src="/vendor/mocha.js"></script>
         <script src="/vendor/chai.js"></script>
         <script>
