--- a/site/views/contest/vacation-photo.hbs
+++ b/site/views/contest/vacation-photo.hbs
@@ -23,6 +23,7 @@
         <div class="col-sm-offset-2 col-sm-4">
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
+        <div></div>
     </div>
 </form>
 
