--- a/site/views/home.hbs
+++ b/site/views/home.hbs
@@ -1,3 +1,10 @@
 <h1>Welcome to meadowlark Travel</h1
 
 {{> weather}}
+
+<div
+        class="fb-like"
+        data-share="true"
+        data-width="450"
+        data-show-faces="true">
+</div>
